2024-09-15T01:17:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10866970046 # 419
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-15
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 171 237 / 172 238
* notice: next accum: outdated-unq outdated-all / unq all: 172 238 / 175 241
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [2024-08-20] / [2024-09-14]

2024-08-30T01:09:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10625065802 # 403
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-30
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 169 235 / 172 238
* notice: next accum: outdated-unq outdated-all / unq all: 171 237 / 172 238
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-08-15] / []

2024-08-21T01:06:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10481673242 # 394
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-21
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 169 235 / 171 237
* notice: next accum: outdated-unq outdated-all / unq all: 169 235 / 172 238
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-08-20]

2024-08-16T01:06:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10412922611 # 389