@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-15T01:17:58Z",
+  "timestamp" : "2024-09-16T01:10:02Z",
   "count_outdated" : 238,
   "uniques_outdated" : 172,
-  "count" : 241,
-  "uniques" : 175,
+  "count" : 242,
+  "uniques" : 176,
   "clones" : [
     {
       "timestamp": "2024-09-14T00:00:00Z",
@@ -13,6 +13,15 @@
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2024-09-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
