@@ -1,3 +1,12 @@
+2024-09-16T01:10:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10875930218 # 420
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-16
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 172 238 / 175 241
+* notice: next accum: outdated-unq outdated-all / unq all: 172 238 / 176 242
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-09-15]
+
 2024-09-15T01:17:58Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10866970046 # 419
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-15
